test: 엔티티를 저장하는 객체 및 테스트 코드 리팩토링