@@ -1,5 +1,12 @@
 package com.woowacourse.moragora.service;
 
+import static com.woowacourse.moragora.support.MeetingFixtures.F12;
+import static com.woowacourse.moragora.support.MeetingFixtures.MORAGORA;
+import static com.woowacourse.moragora.support.UserFixtures.KUN;
+import static com.woowacourse.moragora.support.UserFixtures.MASTER;
+import static com.woowacourse.moragora.support.UserFixtures.PHILLZ;
+import static com.woowacourse.moragora.support.UserFixtures.WOODY;
+import static com.woowacourse.moragora.support.UserFixtures.createUsers;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
@@ -8,14 +15,19 @@ import com.woowacourse.moragora.dto.MeetingResponse;
 import com.woowacourse.moragora.dto.MyMeetingResponse;
 import com.woowacourse.moragora.dto.MyMeetingsResponse;
 import com.woowacourse.moragora.dto.ParticipantResponse;
+import com.woowacourse.moragora.entity.Attendance;
 import com.woowacourse.moragora.entity.Meeting;
+import com.woowacourse.moragora.entity.Participant;
 import com.woowacourse.moragora.entity.Status;
+import com.woowacourse.moragora.entity.user.User;
 import com.woowacourse.moragora.exception.participant.InvalidParticipantException;
 import com.woowacourse.moragora.exception.user.UserNotFoundException;
+import com.woowacourse.moragora.support.DataSupport;
 import com.woowacourse.moragora.support.ServerTimeManager;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -33,21 +45,26 @@ class MeetingServiceTest {
     @Autowired
     private ServerTimeManager serverTimeManager;
 
+    @Autowired
+    private DataSupport dataSupport;
+
     @DisplayName("미팅 방을 저장한다.")
     @Test
     void save() {
         // given
+        final User master = dataSupport.saveUser(MASTER.create());
+        final List<Long> userIds = dataSupport.saveUsers(createUsers());
         final MeetingRequest meetingRequest = new MeetingRequest(
                 "모임1",
                 LocalDate.of(2022, 7, 10),
                 LocalDate.of(2022, 8, 10),
                 LocalTime.of(10, 0),
                 LocalTime.of(18, 0),
-                List.of(2L, 3L, 4L, 5L, 6L, 7L)
+                userIds
         );
 
         // when
-        final Long expected = meetingService.save(meetingRequest, 1L);
+        final Long expected = meetingService.save(meetingRequest, master.getId());
 
         // then
         assertThat(expected).isNotNull();
@@ -57,18 +74,21 @@ class MeetingServiceTest {
     @Test
     void save_throwException_ifUserIdsContainLoginId() {
         // given
-        final Long loginId = 1L;
+        final User master = dataSupport.saveUser(MASTER.create());
+        final List<Long> userIds = dataSupport.saveUsers(createUsers());
+        userIds.add(master.getId());
+
         final MeetingRequest meetingRequest = new MeetingRequest(
                 "모임1",
                 LocalDate.of(2022, 7, 10),
                 LocalDate.of(2022, 8, 10),
                 LocalTime.of(10, 0),
                 LocalTime.of(18, 0),
-                List.of(loginId, 2L, 3L, 4L, 5L, 6L, 7L)
+                userIds
         );
 
         // when, then
-        assertThatThrownBy(() -> meetingService.save(meetingRequest, loginId))
+        assertThatThrownBy(() -> meetingService.save(meetingRequest, master.getId()))
                 .isInstanceOf(InvalidParticipantException.class);
     }
 
@@ -76,18 +96,20 @@ class MeetingServiceTest {
     @Test
     void save_throwException_ifUserIdsDuplicated() {
         // given
-        final Long duplicatedId = 2L;
+        final User master = dataSupport.saveUser(MASTER.create());
+        final User user = dataSupport.saveUser(KUN.create());
+
         final MeetingRequest meetingRequest = new MeetingRequest(
                 "모임1",
                 LocalDate.of(2022, 7, 10),
                 LocalDate.of(2022, 8, 10),
                 LocalTime.of(10, 0),
                 LocalTime.of(18, 0),
-                List.of(duplicatedId, duplicatedId, 3L, 4L, 5L, 6L, 7L)
+                List.of(user.getId(), user.getId())
         );
 
         // when, then
-        assertThatThrownBy(() -> meetingService.save(meetingRequest, 1L))
+        assertThatThrownBy(() -> meetingService.save(meetingRequest, master.getId()))
                 .isInstanceOf(InvalidParticipantException.class);
     }
 
@@ -95,17 +117,19 @@ class MeetingServiceTest {
     @Test
     void save_throwException_ifUserIdsBlank() {
         // given
+        final User user = dataSupport.saveUser(MASTER.create());
+
         final MeetingRequest meetingRequest = new MeetingRequest(
                 "모임1",
                 LocalDate.of(2022, 7, 10),
                 LocalDate.of(2022, 8, 10),
                 LocalTime.of(10, 0),
                 LocalTime.of(18, 0),
-                List.of()
+                Collections.emptyList()
         );
 
         // when, then
-        assertThatThrownBy(() -> meetingService.save(meetingRequest, 1L))
+        assertThatThrownBy(() -> meetingService.save(meetingRequest, user.getId()))
                 .isInstanceOf(InvalidParticipantException.class);
     }
 
@@ -113,17 +137,19 @@ class MeetingServiceTest {
     @Test
     void save_throwException_ifNotExistIdInUserIds() {
         // given
+        final User user = dataSupport.saveUser(MASTER.create());
+
         final MeetingRequest meetingRequest = new MeetingRequest(
                 "모임1",
                 LocalDate.of(2022, 7, 10),
                 LocalDate.of(2022, 8, 10),
                 LocalTime.of(10, 0),
                 LocalTime.of(18, 0),
-                List.of(2L, 8L)
+                List.of(99L)
         );
 
         // when, then
-        assertThatThrownBy(() -> meetingService.save(meetingRequest, 1L))
+        assertThatThrownBy(() -> meetingService.save(meetingRequest, user.getId()))
                 .isInstanceOf(UserNotFoundException.class);
     }
 
@@ -131,23 +157,29 @@ class MeetingServiceTest {
     @Test
     void findById() {
         // given
-        final Long id = 1L;
+        final Meeting meeting = dataSupport.saveMeeting(MORAGORA.create());
+        final User user = dataSupport.saveUser(KUN.create());
+        final Participant participant = dataSupport.saveParticipant(user, meeting);
+        dataSupport.saveAttendance(participant, LocalDate.of(2022, 8, 1), Status.TARDY);
+        dataSupport.saveAttendance(participant, LocalDate.of(2022, 8, 2), Status.TARDY);
+        dataSupport.saveAttendance(participant, LocalDate.of(2022, 8, 3), Status.TARDY);
+
         final MeetingResponse expectedMeetingResponse = new MeetingResponse(
-                1L,
-                "모임1",
+                meeting.getId(),
+                meeting.getName(),
                 3,
-                LocalDate.of(2022, 7, 10),
-                LocalDate.of(2022, 8, 10),
-                LocalTime.of(10, 0),
-                LocalTime.of(18, 0),
+                meeting.getStartDate(),
+                meeting.getEndDate(),
+                meeting.getEntranceTime(),
+                meeting.getLeaveTime(),
                 null
         );
 
-        final LocalDateTime dateTime = LocalDateTime.of(2022, 7, 14, 0, 0);
+        final LocalDateTime dateTime = LocalDateTime.of(2022, 8, 3, 10, 6);
         serverTimeManager.refresh(dateTime);
 
         // when
-        final MeetingResponse response = meetingService.findById(id);
+        final MeetingResponse response = meetingService.findById(meeting.getId());
 
         // then
         assertThat(response).usingRecursiveComparison()
@@ -159,20 +191,29 @@ class MeetingServiceTest {
     @Test
     void findById_putAttendanceIfAbsent() {
         // given
-        final Long id = 1L;
+        final Meeting meeting = dataSupport.saveMeeting(MORAGORA.create());
+        final User user = dataSupport.saveUser(KUN.create());
+        final Participant participant = dataSupport.saveParticipant(user, meeting);
+        dataSupport.saveAttendance(participant, LocalDate.of(2022, 8, 1), Status.TARDY);
+        dataSupport.saveAttendance(participant, LocalDate.of(2022, 8, 2), Status.TARDY);
+        dataSupport.saveAttendance(participant, LocalDate.of(2022, 8, 3), Status.TARDY);
+
         final MeetingResponse expectedMeetingResponse = new MeetingResponse(
-                1L,
-                "모임1",
+                meeting.getId(),
+                meeting.getName(),
                 4,
-                LocalDate.of(2022, 7, 10),
-                LocalDate.of(2022, 8, 10),
-                LocalTime.of(10, 0),
-                LocalTime.of(18, 0),
+                meeting.getStartDate(),
+                meeting.getEndDate(),
+                meeting.getEntranceTime(),
+                meeting.getLeaveTime(),
                 null
         );
 
+        final LocalDateTime dateTime = LocalDateTime.of(2022, 8, 4, 10, 0);
+        serverTimeManager.refresh(dateTime);
+
         // when
-        final MeetingResponse response = meetingService.findById(id);
+        final MeetingResponse response = meetingService.findById(meeting.getId());
 
         // then
         assertThat(response).usingRecursiveComparison()
@@ -184,31 +225,45 @@ class MeetingServiceTest {
     @Test
     void findById_ifNotOverClosingTime() {
         // given
-        final Long id = 1L;
+        final Meeting meeting = dataSupport.saveMeeting(MORAGORA.create());
+        final User user1 = dataSupport.saveUser(KUN.create());
+        final Participant participant1 = dataSupport.saveParticipant(user1, meeting);
+        final Attendance attendance1 = dataSupport.saveAttendance(participant1, LocalDate.of(2022, 8, 1),
+                Status.TARDY);
+
+        final User user2 = dataSupport.saveUser(PHILLZ.create());
+        final Participant participant2 = dataSupport.saveParticipant(user2, meeting);
+        final Attendance attendance2 = dataSupport.saveAttendance(participant2, LocalDate.of(2022, 8, 1),
+                Status.TARDY);
+
+        final User user3 = dataSupport.saveUser(WOODY.create());
+        final Participant participant3 = dataSupport.saveParticipant(user3, meeting);
+        final Attendance attendance3 = dataSupport.saveAttendance(participant3, LocalDate.of(2022, 8, 1),
+                Status.TARDY);
+
         final MeetingResponse expectedMeetingResponse = new MeetingResponse(
-                1L,
-                "모임1",
-                3,
-                LocalDate.of(2022, 7, 10),
-                LocalDate.of(2022, 8, 10),
-                LocalTime.of(10, 0),
-                LocalTime.of(18, 0),
+                meeting.getId(),
+                meeting.getName(),
+                1,
+                meeting.getStartDate(),
+                meeting.getEndDate(),
+                meeting.getEntranceTime(),
+                meeting.getLeaveTime(),
                 List.of(
-                        new ParticipantResponse(1L, "aaa111@foo.com", "아스피", Status.PRESENT, 1),
-                        new ParticipantResponse(2L, "bbb222@foo.com", "필즈", Status.TARDY, 2),
-                        new ParticipantResponse(3L, "ccc333@foo.com", "포키", Status.PRESENT, 0),
-                        new ParticipantResponse(4L, "ddd444@foo.com", "썬", Status.PRESENT, 0),
-                        new ParticipantResponse(5L, "eee555@foo.com", "우디", Status.PRESENT, 0),
-                        new ParticipantResponse(6L, "fff666@foo.com", "쿤", Status.PRESENT, 0),
-                        new ParticipantResponse(7L, "ggg777@foo.com", "반듯", Status.PRESENT, 0)
+                        new ParticipantResponse(user1.getId(), user1.getEmail(), user1.getNickname(),
+                                attendance1.getStatus(), 0),
+                        new ParticipantResponse(user2.getId(), user2.getEmail(), user2.getNickname(),
+                                attendance2.getStatus(), 0),
+                        new ParticipantResponse(user3.getId(), user3.getEmail(), user3.getNickname(),
+                                attendance3.getStatus(), 0)
                 )
         );
 
-        final LocalDateTime dateTime = LocalDateTime.of(2022, 7, 14, 0, 0);
+        final LocalDateTime dateTime = LocalDateTime.of(2022, 8, 1, 10, 4);
         serverTimeManager.refresh(dateTime);
 
         // when
-        final MeetingResponse response = meetingService.findById(id);
+        final MeetingResponse response = meetingService.findById(meeting.getId());
 
         // then
         assertThat(response).usingRecursiveComparison()
@@ -219,31 +274,45 @@ class MeetingServiceTest {
     @Test
     void findById_ifOverClosingTime() {
         // given
-        final Long id = 1L;
+        final Meeting meeting = dataSupport.saveMeeting(MORAGORA.create());
+        final User user1 = dataSupport.saveUser(KUN.create());
+        final Participant participant1 = dataSupport.saveParticipant(user1, meeting);
+        final Attendance attendance1 = dataSupport.saveAttendance(participant1, LocalDate.of(2022, 8, 1),
+                Status.TARDY);
+
+        final User user2 = dataSupport.saveUser(PHILLZ.create());
+        final Participant participant2 = dataSupport.saveParticipant(user2, meeting);
+        final Attendance attendance2 = dataSupport.saveAttendance(participant2, LocalDate.of(2022, 8, 1),
+                Status.TARDY);
+
+        final User user3 = dataSupport.saveUser(WOODY.create());
+        final Participant participant3 = dataSupport.saveParticipant(user3, meeting);
+        final Attendance attendance3 = dataSupport.saveAttendance(participant3, LocalDate.of(2022, 8, 1),
+                Status.TARDY);
+
         final MeetingResponse expectedMeetingResponse = new MeetingResponse(
-                1L,
-                "모임1",
-                3,
-                LocalDate.of(2022, 7, 10),
-                LocalDate.of(2022, 8, 10),
-                LocalTime.of(10, 0),
-                LocalTime.of(18, 0),
+                meeting.getId(),
+                meeting.getName(),
+                1,
+                meeting.getStartDate(),
+                meeting.getEndDate(),
+                meeting.getEntranceTime(),
+                meeting.getLeaveTime(),
                 List.of(
-                        new ParticipantResponse(1L, "aaa111@foo.com", "아스피", Status.PRESENT, 1),
-                        new ParticipantResponse(2L, "bbb222@foo.com", "필즈", Status.TARDY, 3),
-                        new ParticipantResponse(3L, "ccc333@foo.com", "포키", Status.PRESENT, 0),
-                        new ParticipantResponse(4L, "ddd444@foo.com", "썬", Status.PRESENT, 0),
-                        new ParticipantResponse(5L, "eee555@foo.com", "우디", Status.PRESENT, 0),
-                        new ParticipantResponse(6L, "fff666@foo.com", "쿤", Status.PRESENT, 0),
-                        new ParticipantResponse(7L, "ggg777@foo.com", "반듯", Status.PRESENT, 0)
+                        new ParticipantResponse(user1.getId(), user1.getEmail(), user1.getNickname(),
+                                attendance1.getStatus(), 1),
+                        new ParticipantResponse(user2.getId(), user2.getEmail(), user2.getNickname(),
+                                attendance2.getStatus(), 1),
+                        new ParticipantResponse(user3.getId(), user3.getEmail(), user3.getNickname(),
+                                attendance3.getStatus(), 1)
                 )
         );
 
-        final LocalDateTime dateTime = LocalDateTime.of(2022, 7, 14, 10, 5, 1);
+        final LocalDateTime dateTime = LocalDateTime.of(2022, 8, 1, 10, 6);
         serverTimeManager.refresh(dateTime);
 
         // when
-        final MeetingResponse response = meetingService.findById(id);
+        final MeetingResponse response = meetingService.findById(meeting.getId());
 
         // then
         assertThat(response).usingRecursiveComparison()
@@ -254,29 +323,20 @@ class MeetingServiceTest {
     @Test
     void findAllByUserId() {
         // given
-        final long userId = 1L;
-        final LocalTime entranceTime = LocalTime.of(10, 0);
-        final Meeting meeting = new Meeting(
-                "모임1",
-                LocalDate.of(2022, 7, 10),
-                LocalDate.of(2022, 8, 10),
-                entranceTime,
-                LocalTime.of(18, 0));
-        final MeetingRequest meetingRequest = new MeetingRequest(
-                "모임2",
-                LocalDate.of(2022, 7, 10),
-                LocalDate.of(2022, 8, 10),
-                entranceTime,
-                LocalTime.of(18, 0),
-                List.of(2L, 3L)
-        );
-        final LocalDateTime dateTime = LocalDateTime.of(2022, 7, 14, 10, 5);
+        final User user = dataSupport.saveUser(KUN.create());
+        final Meeting meeting1 = dataSupport.saveMeeting(MORAGORA.create());
+        final Meeting meeting2 = dataSupport.saveMeeting(F12.create());
+
+        final Participant participant = dataSupport.saveParticipant(user, meeting1);
+        dataSupport.saveAttendance(participant, LocalDate.of(2022, 8, 1), Status.TARDY);
+
+        dataSupport.saveParticipant(user, meeting2);
+
+        final LocalDateTime dateTime = LocalDateTime.of(2022, 8, 1, 10, 6);
         serverTimeManager.refresh(dateTime);
 
-        meetingService.save(meetingRequest, userId);
-
         // when
-        final MyMeetingsResponse myMeetingsResponse = meetingService.findAllByUserId(userId);
+        final MyMeetingsResponse myMeetingsResponse = meetingService.findAllByUserId(user.getId());
 
         // then
         assertThat(myMeetingsResponse).usingRecursiveComparison()
@@ -284,10 +344,10 @@ class MeetingServiceTest {
                 .isEqualTo(MyMeetingsResponse.of(
                         serverTimeManager.getDateAndTime(),
                         List.of(
-                                MyMeetingResponse.of(meeting, false,
-                                        serverTimeManager.calculateClosingTime(entranceTime), 1),
-                                MyMeetingResponse.of(meetingRequest.toEntity(), false,
-                                        serverTimeManager.calculateClosingTime(entranceTime), 0)
+                                MyMeetingResponse.of(meeting1, false,
+                                        serverTimeManager.calculateClosingTime(meeting1.getEntranceTime()), 1),
+                                MyMeetingResponse.of(meeting2, false,
+                                        serverTimeManager.calculateClosingTime(meeting2.getEntranceTime()), 0)
                         ))
                 );
     }
